// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. an error 1`] = `null`;

exports[`2. loading 1`] = `null`;

exports[`3. an article with no headline falls back to use shortheadline 1`] = `
<article>
  <Helmet>
    <title>
      Some Short Headline
       | 
      
      The Times
    </title>
    <meta
      content="Some Short Headline"
      name="article:title"
    />
    <meta
      content="The Times"
      name="article:publication"
    />
    <meta
      content="Some byline"
      name="author"
    />
    <meta
      content="Some Short Headline"
      property="og:title"
    />
    <meta
      content="article"
      property="og:type"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      property="og:url"
    />
    <meta
      content="https://crop169.io"
      property="og:image"
    />
    <meta
      content="Some Short Headline"
      name="twitter:title"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      name="twitter:url"
    />
    <meta
      content="https://crop169.io"
      name="twitter:image"
    />
  </Helmet>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <h1
        aria-level="1"
        role="heading"
      >
        Some Short Headline
      </h1>
      <div>
        <ArticleFlags />
      </div>
      <div>
        <div>
          <ArticleBylineWithLinks
            ast={
              Array [
                Object {
                  "byline": Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Some byline",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ],
                },
              ]
            }
            color="#1D1D1B"
          />
        </div>
        <div />
        <div>
          <div>
            <DatePublication
              date="2015-03-13T18:54:58.000Z"
              publication="TIMES"
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <figure>
        <div>
          <div>
            <Image
              aspectRatio={1.7777777777777777}
              highResSize={null}
              lowResSize={100}
              uri="https://crop169.io"
            />
          </div>
        </div>
        <figcaption>
          <CenteredCaption
            credits="Some Credits"
            text="Some Caption"
          />
        </figcaption>
      </figure>
    </div>
    <div>
      <div>
        <div>
          <SaveAndShareBar
            articleUrl="https://url.io"
          />
        </div>
      </div>
    </div>
    <div>
      <p>
        Some content
      </p>
      <ArticleExtras
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentsAllowed={false}
        commentsEnabled={true}
        relatedArticleAllowed={false}
        relatedArticleSlice={
          Object {
            "__typename": "StandardSlice",
            "items": Array [
              Object {
                "article": Object {
                  "__typename": "Article",
                  "bylines": Array [],
                  "hasVideo": false,
                  "headline": "RA Headline",
                  "id": "ra-1",
                  "label": "RA Label",
                  "leadAsset": Object {
                    "__typename": "Image",
                    "crop169": Object {
                      "__typename": "Crop",
                      "url": "https://racrop169.io",
                    },
                    "crop32": Object {
                      "__typename": "Crop",
                      "url": "https://racrop32.io",
                    },
                    "title": "RA Title",
                  },
                  "publicationName": "TIMES",
                  "publishedTime": "2015-03-23T19:39:39.000Z",
                  "shortHeadline": "Headline",
                  "shortIdentifier": "2k629tpvh",
                  "slug": "this-is-slug",
                  "summary105": Array [],
                  "summary125": Array [],
                  "summary145": Array [],
                  "summary160": Array [],
                  "summary175": Array [],
                  "summary225": Array [],
                  "url": "https://ra.io",
                },
              },
            ],
          }
        }
        relatedArticlesVisible={false}
        topics={
          Array [
            Object {
              "name": "Topic",
              "slug": "topic",
            },
          ]
        }
        topicsAllowed={false}
      />
    </div>
  </div>
</article>
`;

exports[`4. an article with ads 1`] = `
<article>
  <Helmet>
    <title>
      Some Headline
       | 
      
      The Times
    </title>
    <meta
      content="Some Headline"
      name="article:title"
    />
    <meta
      content="The Times"
      name="article:publication"
    />
    <meta
      content="Some byline"
      name="author"
    />
    <meta
      content="Some Headline"
      property="og:title"
    />
    <meta
      content="article"
      property="og:type"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      property="og:url"
    />
    <meta
      content="https://crop169.io"
      property="og:image"
    />
    <meta
      content="Some Headline"
      name="twitter:title"
    />
    <meta
      content="summary_large_image"
      name="twitter:card"
    />
    <meta
      content="https://www.thetimes.co.uk/article/this-is-slug-2k629tpvh"
      name="twitter:url"
    />
    <meta
      content="https://crop169.io"
      name="twitter:image"
    />
  </Helmet>
  <div>
    <Ad
      contextUrl="https://url.io"
      section="Some Section"
      slotName="header"
    />
  </div>
  <div>
    <div>
      <h1
        aria-level="1"
        role="heading"
      >
        Some Headline
      </h1>
      <div>
        <ArticleFlags />
      </div>
      <div>
        <div>
          <ArticleBylineWithLinks
            ast={
              Array [
                Object {
                  "byline": Array [
                    Object {
                      "attributes": Object {},
                      "children": Array [
                        Object {
                          "attributes": Object {
                            "value": "Some byline",
                          },
                          "children": Array [],
                          "name": "text",
                        },
                      ],
                      "name": "inline",
                    },
                  ],
                },
              ]
            }
            color="#1D1D1B"
          />
        </div>
        <div />
        <div>
          <div>
            <DatePublication
              date="2015-03-13T18:54:58.000Z"
              publication="TIMES"
            />
          </div>
        </div>
      </div>
    </div>
    <div>
      <figure>
        <div>
          <div>
            <Image
              aspectRatio={1.7777777777777777}
              highResSize={null}
              lowResSize={100}
              uri="https://crop169.io"
            />
          </div>
        </div>
        <figcaption>
          <CenteredCaption
            credits="Some Credits"
            text="Some Caption"
          />
        </figcaption>
      </figure>
    </div>
    <div>
      <div>
        <div>
          <SaveAndShareBar
            articleUrl="https://url.io"
          />
        </div>
      </div>
    </div>
    <div>
      <Ad
        contextUrl="https://url.io"
        section="Some Section"
        slotName="inline-ad"
      />
      <ArticleExtras
        articleId="198c4b2f-ecec-4f34-be53-c89f83bc1b44"
        commentsAllowed={false}
        commentsEnabled={true}
        relatedArticleAllowed={false}
        relatedArticleSlice={
          Object {
            "__typename": "StandardSlice",
            "items": Array [
              Object {
                "article": Object {
                  "__typename": "Article",
                  "bylines": Array [],
                  "hasVideo": false,
                  "headline": "RA Headline",
                  "id": "ra-1",
                  "label": "RA Label",
                  "leadAsset": Object {
                    "__typename": "Image",
                    "crop169": Object {
                      "__typename": "Crop",
                      "url": "https://racrop169.io",
                    },
                    "crop32": Object {
                      "__typename": "Crop",
                      "url": "https://racrop32.io",
                    },
                    "title": "RA Title",
                  },
                  "publicationName": "TIMES",
                  "publishedTime": "2015-03-23T19:39:39.000Z",
                  "shortHeadline": "Headline",
                  "shortIdentifier": "2k629tpvh",
                  "slug": "this-is-slug",
                  "summary105": Array [],
                  "summary125": Array [],
                  "summary145": Array [],
                  "summary160": Array [],
                  "summary175": Array [],
                  "summary225": Array [],
                  "url": "https://ra.io",
                },
              },
            ],
          }
        }
        relatedArticlesVisible={false}
        topics={
          Array [
            Object {
              "name": "Topic",
              "slug": "topic",
            },
          ]
        }
        topicsAllowed={false}
      />
    </div>
  </div>
</article>
`;
